syntax = "proto3";
option csharp_namespace = "Phorkus.Proto";

message Global {
    uint64 block_header_height = 1;
    uint64 block_height = 2;
}